# node-control-api/examples/server/server.rs
@@ -108,11 +108,11 @@ impl<C> Api<C> for Server<C> where C: Has<XSpanIdString> + Send + Sync
     /// Refresh worker request
     async fn refresh_worker(
         &self,
-        refesh_worker_req: models::RefeshWorkerReq,
+        refresh_worker_req: models::RefreshWorkerReq,
         context: &C) -> Result<RefreshWorkerResponse, ApiError>
     {
         let context = context.clone();
-        info!("refresh_worker({:?}) - X-Span-ID: {:?}", refesh_worker_req, context.get().0.clone());
+        info!("refresh_worker({:?}) - X-Span-ID: {:?}", refresh_worker_req, context.get().0.clone());
         Err("Generic failure".into())
     }
 
